--- a/app/static/app.css
+++ b/app/static/app.css
@@ -365,8 +365,7 @@ p {
 
 .projects-existing-card .card-header,
 .owners-existing-card .card-header,
-.tags-existing-card .card-header,
-.needs-assignment-matching-card .card-header {
+.tags-existing-card .card-header {
   padding: 24px 24px 0;
   margin-bottom: 12px;
 }
