--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -47,9 +47,7 @@
       <a class="nav-link{% if active_nav == 'ip-assets' %} nav-link-active{% endif %}" href="/ui/ip-assets">IP Assets</a>
       <a class="nav-link{% if active_nav == 'hosts' %} nav-link-active{% endif %}" href="/ui/hosts">Hosts</a>
       <a class="nav-link{% if active_nav == 'ranges' %} nav-link-active{% endif %}" href="/ui/ranges">Ranges</a>
-      <a class="nav-link{% if active_nav == 'projects' %} nav-link-active{% endif %}" href="/ui/projects">Projects</a>
-      <a class="nav-link{% if active_nav == 'tags' %} nav-link-active{% endif %}" href="/ui/tags">Tags</a>
-      <a class="nav-link{% if active_nav == 'vendors' %} nav-link-active{% endif %}" href="/ui/vendors">Vendors</a>
+      <a class="nav-link{% if active_nav == 'library' %} nav-link-active{% endif %}" href="/ui/projects">Library</a>
       <a class="nav-link{% if active_nav == 'audit-log' %} nav-link-active{% endif %}" href="/ui/audit-log">Audit Log</a>
       <a class="nav-link{% if active_nav == 'export' %} nav-link-active{% endif %}" href="/ui/export">Export</a>
       <a class="nav-link{% if active_nav == 'import' %} nav-link-active{% endif %}" href="/ui/import">Import</a>
