--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -49,8 +49,7 @@
       <a class="nav-link{% if active_nav == 'ranges' %} nav-link-active{% endif %}" href="/ui/ranges">Ranges</a>
       <a class="nav-link{% if active_nav == 'library' %} nav-link-active{% endif %}" href="/ui/projects">Library</a>
       <a class="nav-link{% if active_nav == 'audit-log' %} nav-link-active{% endif %}" href="/ui/audit-log">Audit Log</a>
-      <a class="nav-link{% if active_nav == 'export' %} nav-link-active{% endif %}" href="/ui/export">Export</a>
-      <a class="nav-link{% if active_nav == 'import' %} nav-link-active{% endif %}" href="/ui/import">Import</a>
+      <a class="nav-link{% if active_nav == 'data-ops' %} nav-link-active{% endif %}" href="/ui/import">Data Ops</a>
     </nav>
     <div class="sidebar-footer">
       <div class="sidebar-account">
