--- a/app/templates/partials/ip_assets_table.html
+++ b/app/templates/partials/ip_assets_table.html
@@ -31,7 +31,11 @@
         </label>
         <label class="field field-inline">
           <span class="muted">Add tags</span>
-          <input class="input" type="text" name="tags" placeholder="comma,separated">
+          <select class="select" name="tags" multiple size="4">
+            {% for tag in tags %}
+            <option value="{{ tag.name }}">{{ tag.name }}</option>
+            {% endfor %}
+          </select>
         </label>
         <button class="btn btn-primary btn-small" type="submit" data-bulk-submit disabled>Apply changes</button>
       </div>
