Implement chips-based tag picker UI

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -77,5 +77,6 @@
 </div>
 {% endif %}
 <script src="/static/toast.js" defer></script>
+<script src="/static/js/tag-picker.js" defer></script>
 </body>
 </html>
