--- a/app/templates/ip_asset_form.html
+++ b/app/templates/ip_asset_form.html
@@ -56,9 +56,9 @@
     </label>
     <label class="field field-span">
       <span>Tags</span>
-      <select class="select" name="tags" multiple size="6">
+      <select class="select" name="tags" multiple size="6" data-tag-picker data-tag-picker-placeholder="Add tags...">
         {% for tag in tags %}
-        <option value="{{ tag.name }}"{% if tag.name in asset.tags %} selected{% endif %}>{{ tag.name }}</option>
+        <option value="{{ tag.name }}" data-tag-color="{{ tag.color }}"{% if tag.name in asset.tags %} selected{% endif %}>{{ tag.name }}</option>
         {% endfor %}
       </select>
     </label>
