--- a/app/static/app.css
+++ b/app/static/app.css
@@ -387,6 +387,16 @@ p {
   text-align: left;
 }
 
+.table.table-compact th,
+.table.table-compact td {
+  padding: 10px 20px;
+}
+
+.table.table-compact .input-color {
+  height: 34px;
+  padding: 3px 5px;
+}
+
 .table th {
   text-transform: uppercase;
   font-size: 11px;
