--- a/app/templates/partials/tags_tab_content.html
+++ b/app/templates/partials/tags_tab_content.html
@@ -6,7 +6,7 @@
     </div>
   </div>
   <div class="table-wrapper">
-    <table class="table">
+    <table class="table table-compact">
       <thead>
         <tr>
           <th>Name</th>
